Fix stupid shit